# shipping-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS.md  PROJECT-BRIEF.md  TUTORIAL.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-SECURITY.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-gmail/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-parser-layer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-SECURITY.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-deduplication/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW.md  04-SECURITY.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-pipeline/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-HUMAN-UAT.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW.md  05-SECURITY.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/quick/260601-kp7-add-claude-md-guardrail-routing-conversa/: 260601-kp7-PLAN.md  260601-kp7-SUMMARY.md
.planning/quick/260601-pa7-make-register-and-persist-in-shipping-tr/: 260601-pa7-PLAN.md  260601-pa7-SUMMARY.md
.planning/quick/260601-q0w-append-tutorial-md-step-for-phase-4/: 260601-q0w-PLAN.md  260601-q0w-SUMMARY.md
.planning/quick/260602-fv0-wr-01-fix/: 260602-fv0-PLAN.md  260602-fv0-SUMMARY.md
.planning/quick/260602-g3k-wr-02-fix/: 260602-g3k-PLAN.md  260602-g3k-SUMMARY.md
.planning/quick/260602-h2n-wr-03-fix/: 260602-h2n-PLAN.md  260602-h2n-SUMMARY.md
.planning/quick/260602-j4p-wr-04-fix/: 260602-j4p-PLAN.md  260602-j4p-SUMMARY.md
shipping_tracker/: __init__.py  __main__.py  db.py  logging_config.py  main.py  registrar.py
shipping_tracker/gmail/: __init__.py  auth.py  client.py  query.py
shipping_tracker/parsers/: __init__.py  aliexpress.py  base.py
tests/: conftest.py  test_aliexpress_parser.py  test_db.py  test_gmail_auth.py  test_gmail_client.py  test_gmail_query.py  test_logging_config.py  test_main.py  test_registrar.py  test_smoke.py
tests/fixtures/: __init__.py  fake_aliexpress_email.py  fake_db.py  fake_gmail_message.py
(+16 files in other folders)
