[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "shipping-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "structlog>=25.5",
    "python-dotenv>=1.2",
    "google-api-python-client>=2.197",
    "google-auth-oauthlib>=1.4",
    "google-auth>=2.53",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9.0",
    "pre-commit>=4.6",
    "respx>=0.23",
    "google-api-python-client-stubs>=1.37",
]

[project.scripts]
shipping-tracker = "shipping_tracker.main:main"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["google.*", "googleapiclient.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true

# WAVE 0 (Nyquist) TEMPORARY OVERRIDE — REMOVE IN PLAN 02.
# tests/test_registrar.py is authored before the source it tests: it imports
# QuotaExceededError / TrackingMoreRegistrar from shipping_tracker.registrar
# (which Plan 02 adds) and injects a respx.MockRouter as an httpx transport.
# Until Plan 02 lands those symbols, --strict mypy reports attr-defined and
# arg-type errors that are expected RED state, not real defects. This override
# keeps the pre-commit/CI mypy gate green for the rest of the tree; Plan 02 must
# delete this block once the source exists so full strict checking is restored.
[[tool.mypy.overrides]]
module = ["tests.test_registrar"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["shipping_tracker*"]
